Adding final touches to base elements of portfolio

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,5 +1,5 @@
 $primary-color: #444;
-$secondary-color: #eece1a;
+$secondary-color: #e79934;
 $show-home-image: true;
 $home-image: url(../img/image1.jpeg);
 $background-opacity: 0.9;
