--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -54,11 +54,37 @@
 
         grid-template-columns: 1fr;
     }
+
+    .boxes {
+        display: grid;
+        grid-gap: 1rem;
+        padding-bottom: 0;
+    }
 }
 
 
 @include mediaSm {
-    main#home h1 {
-        margin-top: 10vh;
+
+    main {
+        padding: 2rem;
+
+        #home h1 {
+            margin-top: 10vh;
+        }
+
+        .lg-heading {
+            margin-top: 1rem;
+            font-size: 5rem;
+        }
+    }
+
+    .projects {
+        grid-template-columns: 1fr;
+    }
+
+    .boxes {
+        display: grid;
+        grid-gap: 1rem;
+        grid-template-columns: 1fr;
     }
 }
