--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,9 +1,3 @@
-@include mediaXl {}
-
-
-@include mediaLg {}
-
-
 @include mediaMd {
     main {
         align-items: center;
@@ -55,11 +49,7 @@
         grid-template-columns: 1fr;
     }
 
-    .boxes {
-        display: grid;
-        grid-gap: 1rem;
-        padding-bottom: 0;
-    }
+
 }
 
 
@@ -80,5 +70,10 @@
 
     .projects {
         grid-template-columns: 1fr;
+    }
+
+    .boxes div {
+        font-size: 1rem;
+        padding-bottom: 1rem;
     }
 }
