--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,7 +1,7 @@
 $primary-color: #444;
 $secondary-color: #e79934;
 $show-home-image: true;
-$home-image: url(../img/image1.jpeg);
+$home-image: url('../image1.jpeg');
 $background-opacity: 0.9;
 
 @mixin easeOut {
