--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -82,7 +82,7 @@
         .portrait {
             width: 250px;
             height: 250px;
-            background: url('../img/portrait.jpg');
+            background: url("../me.jpeg");
             border-radius: 50%;
             border: solid 3px $secondary-color;
         }
