--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -33,7 +33,7 @@
     }
 
     .portrait {
-        background: url('../img/portrait_small.jpg');
+        // background: url('../img/portrait_small.jpg');
         width: 150px;
         height: 150px;
     }
