--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -56,15 +56,13 @@
 @include mediaSm {
 
     main {
-        padding: 2rem;
 
-        #home h1 {
-            margin-top: 10vh;
-        }
 
         .lg-heading {
             margin-top: 1rem;
             font-size: 5rem;
+            text-align: center;
+            margin-right: 10%;
         }
     }
 
